--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
-  "name": "Wordpress Style Editor",
+  "name": "__MSG_extName__",
   "version": "1.3.1",
-  "description": "Save CSS changes made in developer tools, directly to the Wordpress stylesheet.",
+  "description": "__MSG_extDesc__",
   "manifest_version": 2,
+  "default_locale": "en",
   "permissions": [
     "tabs",
     "cookies",
